syntax = "proto3";

package api;

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    bool status = 1;
    string message = 2;
    LoginData data = 3;
}

message LoginData{
    string access_token = 1;
}